Fix bugs on Safari 13 and over

--- a/css/main.css
+++ b/css/main.css
@@ -1015,6 +1015,7 @@ img {
 
 .section-img > img {
   height: 100%;
+  max-width: unset;
 }
 
 .section {
