--- a/scss/blocks/_basics.scss
+++ b/scss/blocks/_basics.scss
@@ -211,6 +211,7 @@ img {
   z-index: 3;
   & > img {
     height: 100%;
+    max-width: unset;
   }
 }
 
